--- a/docs/components/nav_pane/nav_pane.css
+++ b/docs/components/nav_pane/nav_pane.css
@@ -1,6 +1,7 @@
 @import '../../theme.css';
 
 :host {
+    display: block;
     font-size: 1.5rem;
     background-color: var(--light-gray);
     overflow-x: hidden;
